# airdrop

./: Anchor.toml  package.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
migrations/: deploy.js  deploy.ts
programs/airdrop/: Cargo.toml
programs/airdrop/src/: context.rs  error.rs  lib.rs  message.rs  utils.rs
programs/airdrop/src/state/: airdrop_data.rs  claim_status.rs  mod.rs
tests/: airdrop.ts
tests/helpers.ts/: consts.ts  index.ts  malicious.ts  utils.ts
